{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 46,
  "lineage": "f83dc00a-4270-cb33-14e1-93bf7fb5647b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:551242489466:loadbalancer/app/alb-blog-app-pr-aps1-mum-01/4a7988bfda724c04",
            "arn_suffix": "app/alb-blog-app-pr-aps1-mum-01/4a7988bfda724c04",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-blog-app-pr-aps1-mum-01-684793381.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:551242489466:loadbalancer/app/alb-blog-app-pr-aps1-mum-01/4a7988bfda724c04",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-blog-app-pr-aps1-mum-01",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b05f192ee06ba285"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0daf7f4390dbcfb7a"
              },
              {
                "subnet_id": "subnet-0fa95f7a58f70a901"
              }
            ],
            "subnets": [
              "subnet-0daf7f4390dbcfb7a",
              "subnet-0fa95f7a58f70a901"
            ],
            "vpc_id": "vpc-07555889ab9662817",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.alb.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:551242489466:listener/app/alb-blog-app-pr-aps1-mum-01/4a7988bfda724c04/2fbc76ff29a40864",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:551242489466:targetgroup/alt-blog-app-pr-aps1-mum-01/d8ec9a6bcc5c928e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:551242489466:listener/app/alb-blog-app-pr-aps1-mum-01/4a7988bfda724c04/2fbc76ff29a40864",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:551242489466:loadbalancer/app/alb-blog-app-pr-aps1-mum-01/4a7988bfda724c04",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.test",
            "module.alb.aws_lb_target_group.ip-example",
            "module.alb.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ip-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:551242489466:targetgroup/alt-blog-app-pr-aps1-mum-01/d8ec9a6bcc5c928e",
            "arn_suffix": "targetgroup/alt-blog-app-pr-aps1-mum-01/d8ec9a6bcc5c928e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-399",
                "path": "/blogs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:551242489466:targetgroup/alt-blog-app-pr-aps1-mum-01/d8ec9a6bcc5c928e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alt-blog-app-pr-aps1-mum-01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07555889ab9662817"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:security-group/sg-0b05f192ee06ba285",
            "description": "Security Group for load balancer Blog Application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b05f192ee06ba285",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lsg-blog-app-pr-aps1-mum-01",
            "name_prefix": "",
            "owner_id": "551242489466",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07555889ab9662817"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:security-group/sg-0d3f3b09b0a59612d",
            "description": "Security Group for ecs Blog Application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3f3b09b0a59612d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecsg-blog-app-pr-aps1-mum-01",
            "name_prefix": "",
            "owner_id": "551242489466",
            "revoke_rules_on_delete": false,
            "tags": {
              "App Name": "blog-app",
              "Env": "pr",
              "Name": "ecsg-blog-app-pr-aps1-mum-01"
            },
            "tags_all": {
              "App Name": "blog-app",
              "Env": "pr",
              "Name": "ecsg-blog-app-pr-aps1-mum-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07555889ab9662817"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:551242489466:security-group/sg-0ff49996d1dbf93b7",
            "description": "Security Group for RDS Blog Application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff49996d1dbf93b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.101.0/25",
                  "10.100.101.128/25"
                ],
                "description": null,
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rsg-blog-app-pr-aps1-mum-01",
            "name_prefix": "",
            "owner_id": "551242489466",
            "revoke_rules_on_delete": false,
            "tags": {
              "App Name": "blog-app",
              "Env": "pr",
              "Name": "rsg-blog-app-pr-aps1-mum-01"
            },
            "tags_all": {
              "App Name": "blog-app",
              "Env": "pr",
              "Name": "rsg-blog-app-pr-aps1-mum-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07555889ab9662817"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}